# phys_type_system

./: README.md
exe_phys_types_generator/: .gitignore  CMakeLists.txt  CMakePresets.json  demo.cpp  main.cpp
exe_phys_types_generator/initial_manual_prototype/: .$graphs_of_my_types.drawio.bkp  .$graphs_of_my_types.drawio.dtmp  graphs_of_my_types.drawio  myTypeIdea.hpp  myTypeIdeaTestFuncs.hpp
exe_trying_out_mp_units/: .gitignore  CMakeLists.txt  UnitsCheckout.cpp  main.cpp  vcpkg.json
lib_sit/: CMakeLists.txt  demo.cpp  demo_uni.cpp  demo_uni3.cpp  demo_uni4.cpp  demo_uni5.cpp  demo_uni6.cpp  demo_uni7.cpp  demo_uni8.cpp  sit.hpp  sit_scaled.hpp  sit_uni.hpp  sit_uni_2.hpp  sit_uni_3.hpp  sit_uni_4.hpp  sit_uni_5.hpp  sit_uni_6.hpp  sit_uni_7.hpp  sit_uni_8.hpp
nholthous_units/: CMakeLists.txt  units.h
